@@ -1,3 +1,7 @@
+Sat Aug 29 04:09:43 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/commands.c,tests/cmd_dummy.svx: Check syntax on *ref.
+
 Sat Aug 29 00:53:16 GMT 2015  Olly Betts <olly@survex.com>
 
 	* doc/manual.sgml,src/commands.c,tests/cmd_dummy.svx,
